# termy

./: .emdash.json  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.api  Dockerfile.theme-store  LICENSE  PERF-PLAN.md  README.md  ROADMAP.md  Task.md  build.rs  flake.nix  index.html  justfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: architecture-checks.yml  macos-native.yml  macos-performance.yml  pr-quality.yaml  release.yml
Casks/: termy.rb
apps/libtermy-demo/: index.html  package.json  tsconfig.json  vite.config.ts
assets/: termy.icns
assets/shell/: termy.bash  termy.fish  termy.zsh
crates/: README.md
crates/agent_sidebar/: Cargo.toml
crates/agent_sidebar/src/: lib.rs  markdown.rs  mode.rs  session.rs  tools.rs  view.rs
crates/agents/: Cargo.toml
crates/auto_update/: Cargo.toml  README.md
crates/auto_update/src/: engine.rs  lib.rs
crates/auto_update_ui/: README.md
crates/claude_code/: Cargo.toml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/cli/src/commands/: edit_config.rs  help.rs  list_actions.rs  list_colors.rs  list_fonts.rs  list_keybinds.rs  list_plugins.rs  list_themes.rs  mod.rs  open.rs  prettify_config.rs  providers.rs  show_config.rs  theme_repo.rs  tui.rs  update.rs  validate_config.rs
crates/cli_install_core/: Cargo.toml  README.md
crates/codex/: Cargo.toml
crates/command_core/: README.md
crates/config_core/: README.md
crates/core/: Cargo.toml  README.md
crates/core/src/: cell_metrics.rs  config.rs  frame.rs  keyboard.rs  lib.rs  links.rs  locale.rs  osc_intercept.rs  path_env.rs  render_metrics.rs  runtime.rs  search.rs
crates/core/src/protocol/: mod.rs  query_colors.rs  replies.rs
crates/desktop_app/: Cargo.toml  README.md  build.rs
crates/desktop_app/src/: app_icon.rs  asset_source.rs  chrome_style.rs  cli_delegate.rs  colors.rs  commands.rs  deeplink.rs  macos_thermal_observer.rs  macos_titlebar_drag.rs  main.rs  startup.rs  text_input.rs  theme_store.rs
crates/desktop_app/src/config/: error.rs  mod.rs  mutate.rs
crates/desktop_app/src/onboarding/: components.rs  mod.rs  sections.rs  state.rs
crates/desktop_app/src/onboarding/import/: iterm2.rs  kitty.rs  mod.rs
crates/desktop_app/src/settings_view/: colors.rs  input_mode.rs  keybinds.rs  mod.rs  sections.rs  state.rs  state_apply.rs  test_utils.rs
crates/desktop_app/src/terminal_view/: inline_input.rs  macos_file_drop.rs  mod.rs  native_window_tabs.rs  overlay_view.rs  render.rs  scrollbar.rs  window_appearance.rs
crates/desktop_app/src/terminal_view/command_palette/: mod.rs  state_tmux.rs  tmux_sessions.rs
crates/desktop_app/src/terminal_view/interaction/: actions.rs  chrome.rs  install_cli.rs  mouse.rs  mouse_reporting.rs  native_panes.rs  quit.rs  scroll.rs  selection.rs  terminal.rs
crates/desktop_app/src/terminal_view/runtime/: mod.rs  tmux_sync.rs
crates/desktop_app/src/terminal_view/runtime/tmux/: events.rs  mod.rs  snapshot.rs
crates/desktop_app/src/terminal_view/tab_strip/: chrome.rs  chrome_horizontal.rs  chrome_tests.rs  constants.rs  gestures.rs  hints.rs  hit_test.rs  layout.rs  mod.rs  render_horizontal.rs  render_palette.rs  render_shared.rs  render_tab_item.rs  render_text_measure.rs  render_vertical.rs  state.rs  titlebar_drag.rs
crates/desktop_app/src/terminal_view/tabs/: drag.rs  lifecycle.rs  reset.rs  sizing.rs
crates/desktop_app/src/ui/: mod.rs  scrollbar.rs
crates/ffi/: Cargo.toml  README.md
crates/gpui_native_appkit/: Cargo.toml  README.md  build.rs
crates/native_sdk/: Cargo.toml  README.md
crates/native_sdk/src/: lib.rs
crates/plugin_core/: Cargo.toml
crates/plugin_host/: Cargo.toml
crates/plugin_host/src/: lib.rs
crates/plugin_sdk/: Cargo.toml
crates/release_core/: Cargo.toml  README.md
crates/search/: Cargo.toml  README.md
crates/terminal_ui/: Cargo.toml  README.md
crates/terminal_ui/src/: grid.rs  keyboard.rs  lib.rs  links.rs  locale.rs  monotonic_time.rs  mouse_protocol.rs  osc_intercept.rs  pane_terminal.rs  path_env.rs  render_metrics.rs  runtime.rs  shell_integration.rs  tmux.rs
crates/terminal_ui/src/protocol/: mod.rs  query_colors.rs  replies.rs
crates/terminal_ui/src/tmux/: client.rs  command.rs  launch.rs  mod.rs  payload.rs  session.rs  shutdown.rs  snapshot.rs  types.rs
crates/terminal_ui/src/tmux/control/: channel.rs  coalescer.rs  mod.rs  parser.rs  worker.rs
crates/terminal_ui/tests/: tmux_split_integration.rs
crates/terminal_ui/tests/support/: mod.rs  tmux_harness.rs
crates/termy_api/: Cargo.toml
crates/termy_api/src/: main.rs
crates/theme-store/: Cargo.toml  README.md
crates/theme_core/: Cargo.toml  README.md
crates/themes/: README.md
crates/toast_sdk/: README.md
crates/wasm/: Cargo.toml  README.md
crates/wasm/src/: lib.rs
crates/xtask/: Cargo.toml  README.md
crates/xtask/src/: benchmark.rs  main.rs
docs/: configuration.md  development.md  keybindings.md  libtermy-js.md  libtermy.md  performance-before-after.md
docs/architecture/: plugins.md  project-layout.md  release-packaging.md
docs/engineering/: README.md  quality-scorecard.md  roadmap.md  terminal-view-decomposition.md  testing.md
docs/plans/: 2026-03-01-tmux-integration-hardening.md
examples/libtermy-c/: main.c
examples/libtermy-demo/: README.md
examples/libtermy-rust/: Cargo.toml
installer/: termy.iss
macos/: Package.swift  README.md
plugin-api/: architecture.md  wireframe
scripts/: README.md  build-dmg-signed.sh  build-dmg.sh  build-linux.sh  build-native-preview-dmg.sh  build-setup.ps1  check-boundaries.sh  check-file-sizes.sh  generate-icon.sh  test_osc_sequences.sh
site/: .env.example  Documentation.html  index.html  package-lock.json  package.json  server.ts  vite.config.ts
src/: app_actions.rs  app_icon.rs  asset_source.rs  colors.rs  commands.rs  config.rs  experimental.rs  main.rs  menus.rs  plugins.rs  settings_view.rs  startup.rs  text_input.rs  theme_store.rs
ts-bindings/: tsconfig.json
website/: .dockerignore  .env.local  .oxlintrc.json  Dockerfile  package.json  source.config.ts  vite.config.ts
(+518 files in other folders)
