[workspace]
members = [
  ".",
  "crates/cli_install_core",
  "crates/command_core",
  "crates/config_core",
  "crates/release_core",
  "crates/native_sdk",
  "crates/auto_update",
  "crates/auto_update_ui",
  "crates/theme_core",
  "crates/themes",
  "crates/terminal_ui",
  "crates/toast_sdk",
  "crates/search",
  "crates/xtask",
  "crates/cli",
  "crates/openai",
  "crates/gemini",
  "crates/plugin_core",
  "crates/plugin_host",
  "crates/plugin_sdk",
  "crates/termy_api",
  "crates/plugin_release_notes",
  "crates/agent_sidebar",
]
resolver = "2"

[package]
name = "termy"
version = "0.1.48"
edition = "2024"

[package.metadata.bundle]
name = "Termy"
identifier = "com.example.termy"
short_description = "Minimal GPUI-powered terminal"
category = "Developer Tool"
icon = ["assets/termy.icns"]

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui" }

# Terminal emulation
alacritty_terminal = { git = "https://github.com/alacritty/alacritty", rev = "4225cea231432fb23442b1da2463b4ec9dfd726c" }

# Async/concurrency
futures = "0.3"
flume = "0.11"
parking_lot = "0.12"
smol = "2.0"
anyhow = "1.0"
dirs = "6.0"

# Logging
log = "0.4"
env_logger = "0.11"

# File dialogs
rfd = "0.15"

# JSON parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"

# File I/O
tempfile = "3"
fs4 = { version = "0.13.1", features = ["sync"] }
ureq = { version = "2", features = ["json"] }
webbrowser = "1.0"
sysinfo = "0.37"

# Termy Workspace Crates
termy_auto_update = { path = "crates/auto_update" }
termy_auto_update_ui = { path = "crates/auto_update_ui" }
termy_themes = { path = "crates/themes" }
termy_terminal_ui = { path = "crates/terminal_ui" }
termy_toast = { path = "crates/toast_sdk" }
termy_search = { path = "crates/search" }
termy_native_sdk = { path = "crates/native_sdk" }
termy_config_core = { path = "crates/config_core" }
termy_command_core = { path = "crates/command_core" }
termy_cli_install_core = { path = "crates/cli_install_core" }
termy_openai = { path = "crates/openai" }
termy_gemini = { path = "crates/gemini" }
termy_plugin_host = { path = "crates/plugin_host" }
termy_plugin_core = { path = "crates/plugin_core" }
termy_agent_sidebar = { path = "crates/agent_sidebar" }

[target.'cfg(target_os = "macos")'.dependencies]
# Pin core-text to 21.0.0 to avoid core-graphics version conflict on macOS.
core-text = "=21.0.0"

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

[dev-dependencies]
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui", features = [
  "test-support",
] }
