[workspace]
members = [
  ".",
  "crates/cli_install_core",
  "crates/command_core",
  "crates/config_core",
  "crates/release_core",
  "crates/native_sdk",
  "crates/auto_update",
  "crates/auto_update_ui",
  "crates/theme_core",
  "crates/themes",
  "crates/terminal_ui",
  "crates/toast_sdk",
  "crates/search",
  "crates/xtask",
  "crates/cli",
  "crates/termy_api",
  "crates/agents",
]
resolver = "2"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(macos_sdk_26)',
  'cfg(feature, values("cargo-clippy"))',
] }

[workspace.lints.clippy]
# ── Correctness & performance ────────────────────────────────────
redundant_clone = "warn"
inefficient_to_string = "warn"
large_types_passed_by_value = "warn"
unnecessary_wraps = "warn"
unnested_or_patterns = "warn"
manual_let_else = "warn"
semicolon_if_nothing_returned = "warn"

# ── Code quality ─────────────────────────────────────────────────
cloned_instead_of_copied = "warn"
flat_map_option = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
macro_use_imports = "warn"
map_unwrap_or = "warn"
needless_continue = "warn"
trivially_copy_pass_by_ref = "warn"
uninlined_format_args = "warn"
explicit_iter_loop = "warn"
ref_as_ptr = "warn"
single_match_else = "warn"

# ── Safety nets ──────────────────────────────────────────────────
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"

[package]
name = "termy"
version = "0.1.80"
edition = "2024"

[package.metadata.bundle]
name = "Termy"
identifier = "com.example.termy"
short_description = "Minimal GPUI-powered terminal"
category = "Developer Tool"
icon = ["assets/termy.icns"]

[lints]
workspace = true

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "83de8a25e0ef71a8d762a148459bc863adaeb7e3", package = "gpui" }

# Terminal emulation
alacritty_terminal = "0.26"

# Async/concurrency
futures = "0.3"
flume = "0.11"
parking_lot = "0.12"
smol = "2.0"
anyhow = "1.0"
dirs = "6.0"

# Logging
log = "0.4"
env_logger = "0.11"

# File dialogs
rfd = "0.15"

# JSON parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"

# File I/O
tempfile = "3"
fs4 = { version = "0.13.1", features = ["sync"] }
ureq = { version = "2", features = ["json"] }
webbrowser = "1.0"
sysinfo = "0.37"

# Termy Workspace Crates
termy_auto_update = { path = "crates/auto_update" }
termy_auto_update_ui = { path = "crates/auto_update_ui" }
termy_themes = { path = "crates/themes" }
termy_terminal_ui = { path = "crates/terminal_ui" }
termy_toast = { path = "crates/toast_sdk" }
termy_search = { path = "crates/search" }
termy_native_sdk = { path = "crates/native_sdk" }
termy_config_core = { path = "crates/config_core" }
termy_command_core = { path = "crates/command_core" }
termy_cli_install_core = { path = "crates/cli_install_core" }

[target.'cfg(not(target_os = "windows"))'.dependencies]
libsqlite3-sys = "0.30.1"

[target.'cfg(target_os = "macos")'.dependencies]
# Pin core-text to 21.0.0 to avoid core-graphics version conflict on macOS.
core-text = "=21.0.0"
cocoa = "0.26"
objc = "0.2"
raw-window-handle = "0.6"

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

[dev-dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "83de8a25e0ef71a8d762a148459bc863adaeb7e3", package = "gpui", features = [
  "test-support",
] }
