[workspace]
members = [
  "crates/desktop_app",
  "crates/core",
  "crates/ffi",
  "crates/cli_install_core",
  "crates/command_core",
  "crates/config_core",
  "crates/release_core",
  "crates/native_sdk",
  "crates/auto_update",
  "crates/auto_update_ui",
  "crates/theme_core",
  "crates/themes",
  "crates/terminal_ui",
  "crates/toast_sdk",
  "crates/wasm",
  "crates/search",
  "crates/xtask",
  "crates/cli",
]
resolver = "2"

[workspace.dependencies]
alacritty_terminal = "0.26"
anyhow = "1.0"
dirs = "6.0"
flume = "0.11"
gpui = { git = "https://github.com/zed-industries/zed", rev = "83de8a25e0ef71a8d762a148459bc863adaeb7e3", package = "gpui" }
log = "0.4"
polling = "3.11"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3"
unicode-width = "0.2"
ureq = { version = "2", features = ["json"] }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(macos_sdk_26)',
  'cfg(feature, values("cargo-clippy"))',
] }

[workspace.lints.clippy]
# ── Correctness & performance ────────────────────────────────────
redundant_clone = "warn"
inefficient_to_string = "warn"
large_types_passed_by_value = "warn"
unnecessary_wraps = "warn"
unnested_or_patterns = "warn"
manual_let_else = "warn"
semicolon_if_nothing_returned = "warn"

# ── Code quality ─────────────────────────────────────────────────
cloned_instead_of_copied = "warn"
flat_map_option = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
macro_use_imports = "warn"
map_unwrap_or = "warn"
needless_continue = "warn"
trivially_copy_pass_by_ref = "warn"
uninlined_format_args = "warn"
explicit_iter_loop = "warn"
ref_as_ptr = "warn"
single_match_else = "warn"

# ── Safety nets ──────────────────────────────────────────────────
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"

[profile.release]
strip = "symbols"
