[package]
name = "termy_auto_update"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "83de8a25e0ef71a8d762a148459bc863adaeb7e3", package = "gpui" }
anyhow = "1"
log = "0.4"
flume = "0.11"
ureq = { version = "2", features = ["json"] }
termy_release_core = { path = "../release_core" }
