[package]
name = "termy_auto_update"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
gpui = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
flume = { workspace = true }
sha2 = { workspace = true }
ureq = { workspace = true }
termy_release_core = { path = "../release_core" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = ["Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
