[package]
name = "termy_cli"
version = "0.1.44"
edition = "2024"

[[bin]]
name = "termy-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "6.0"
anyhow = "1.0"
ratatui = "0.29"
crossterm = "0.28"
termy_config_core = { path = "../config_core" }
termy_command_core = { path = "../command_core" }
termy_cli_install_core = { path = "../cli_install_core" }
termy_theme_core = { path = "../theme_core" }
termy_themes = { path = "../themes" }
termy_release_core = { path = "../release_core" }
termy_plugin_host = { path = "../plugin_host" }

# For list-fonts (platform-specific)
[target.'cfg(target_os = "macos")'.dependencies]
core-text = "=21.0.0"
core-foundation = "0.10"
