[package]
name = "termy_cli"
version = "0.3.0"
edition = "2024"

[lints]
workspace = true

[[bin]]
name = "termy-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = { workspace = true }
anyhow = { workspace = true }
ratatui = "0.29"
crossterm = "0.28"
semver = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
termy_config_core = { path = "../config_core" }
termy_command_core = { path = "../command_core" }
termy_cli_install_core = { path = "../cli_install_core" }
termy_theme_core = { path = "../theme_core" }
termy_themes = { path = "../themes" }
termy_release_core = { path = "../release_core" }

[dev-dependencies]
tempfile = { workspace = true }

# For list-fonts (platform-specific)
[target.'cfg(target_os = "macos")'.dependencies]
core-text = "=21.0.0"
core-foundation = "0.10"
