[package]
name = "termy_core"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
alacritty_terminal = "0.26"
flume = "0.11"
dirs = "6.0"
fontdb = "0.23"
polling = "3.11"
termy_config_core = { path = "../config_core" }
termy_search = { path = "../search" }
termy_themes = { path = "../themes" }
ttf-parser = "0.25"

[target.'cfg(unix)'.dependencies]
rustix-openpty = "0.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[dev-dependencies]
tempfile = "3"
