[package]
name = "termy"
version = "0.3.0"
edition = "2024"

[package.metadata.bundle]
name = "Termy"
identifier = "com.lassevestergaard.termy"
short_description = "Minimal GPUI-powered terminal"
category = "Developer Tool"
icon = ["../../assets/termy.icns"]

[lints]
workspace = true

[dependencies]
gpui = { workspace = true }

# Terminal emulation
alacritty_terminal = { workspace = true }

# Async/concurrency
futures = "0.3"
flume = { workspace = true }
parking_lot = "0.12"
smol = "2.0"
anyhow = { workspace = true }
dirs = { workspace = true }

# Logging
log = { workspace = true }
env_logger = "0.11"

# File dialogs
rfd = "0.15"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
plist = "1.7"
bincode = "1.3"
url = "2.5"

# File I/O
tempfile = { workspace = true }
fs4 = { version = "0.13.1", features = ["sync"] }
ureq = { workspace = true }
webbrowser = "1.0"
sysinfo = "0.37"

# Termy Workspace Crates
termy_auto_update = { path = "../auto_update" }
termy_auto_update_ui = { path = "../auto_update_ui" }
termy_themes = { path = "../themes" }
termy_terminal_ui = { path = "../terminal_ui" }
termy_toast = { path = "../toast_sdk" }
termy_search = { path = "../search" }
termy_native_sdk = { path = "../native_sdk" }
termy_config_core = { path = "../config_core" }
termy_command_core = { path = "../command_core" }
termy_cli_install_core = { path = "../cli_install_core" }

[target.'cfg(not(target_os = "windows"))'.dependencies]
libsqlite3-sys = "0.30.1"

[target.'cfg(target_os = "macos")'.dependencies]
# Pin core-text to 21.0.0 to avoid core-graphics version conflict on macOS.
core-text = "=21.0.0"
cocoa = "0.26"
gpui-native-appkit = { path = "../gpui_native_appkit" }
objc = "0.2"
raw-window-handle = "0.6"

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
