[package]
name = "termy_native_sdk"
version = "0.1.0"
edition = "2024"

[target.'cfg(target_os = "macos")'.dependencies]
dispatch2 = "0.3.0"
objc2 = "0.6.3"
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSData", "NSString"] }
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSAlert", "NSApplication", "NSButton", "NSControl", "NSEvent", "NSImage", "NSMenu", "NSMenuItem", "NSResponder", "NSView"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging"] }
