[package]
name = "termy_native_sdk"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
dispatch2 = "0.3.0"
objc2 = "0.6.3"
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSData", "NSDictionary", "NSGeometry", "NSString"] }
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSAlert", "NSApplication", "NSBitmapImageRep", "NSButton", "NSControl", "NSEvent", "NSGraphics", "NSImage", "NSImageRep", "NSMenu", "NSMenuItem", "NSResponder", "NSView", "NSWorkspace"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging"] }
