[package]
name = "termy_plugin_host"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
termy_config_core = { path = "../config_core" }
termy_plugin_core = { path = "../plugin_core" }
termy_toast = { path = "../toast_sdk" }
log = "0.4"
