[package]
name = "termy_terminal_ui"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
alacritty_terminal = { workspace = true }
flume = { workspace = true }
gpui = { workspace = true }
dirs = { workspace = true }
polling = { workspace = true }

[target.'cfg(unix)'.dependencies]
rustix-openpty = "0.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
