[package]
name = "termy_terminal_ui"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
alacritty_terminal = { workspace = true }
flume = { workspace = true }
gpui = { workspace = true }
termy_core = { path = "../core" }

[target.'cfg(unix)'.dependencies]
rustix-openpty = "0.2"
