[package]
name = "termy_api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros", "multipart"] }
aws-config = "1.8"
aws-sdk-s3 = "1.115"
aws-types = "1.3"
chrono = { version = "0.4", features = ["clock", "serde"] }
dotenvy = "0.15"
hex = "0.4"
jsonschema = "0.18"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "=0.8.6", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "chrono",
  "macros",
  "migrate",
], default-features = false }
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6", features = ["cors"] }
url = "2.5"
uuid = { version = "1.11", features = ["serde", "v4"] }
