[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
roxmltree = "0.20"
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
termy_command_core = { path = "../command_core" }
termy_config_core = { path = "../config_core" }
termy_terminal_ui = { path = "../terminal_ui" }
